fix: image selection none and transition null on mobile/tabs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,7 @@ h1 {
 .image-container {
   position: relative;
   display: inline-block;
+  user-select: none;
 }
 
 .image-container img {
